--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
   <html>
     <head>
-      
+      <title>MedCollab - Início</title>
     </head>
     <body>
-      
+      <h1>Este é o início de tudo</h1>
+      <p>Infelizmente nao tem nada aqui ainda.</p>
+      <p>Experimente visitar nossa página de <a href="eventos.html">eventos</a></p>
     </body>
   </html>
