--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
       <h1>Este é o início de tudo</h1>
       <p>Infelizmente nao tem nada aqui ainda.</p>
       <p>Experimente visitar nossa página de <a href="eventos.html">eventos</a></p>
+      <p>Ou, se preferir, visite uma página informativa sobre <a href="about.html">quem somos nós</a></p>
     </body>
   </html>
