--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
   <html>
     <head>
-      <title>MedCollab - Início</title>
+      <title>MedCollab - Sobre nós</title>
     </head>
      <body>
 <h1>Sobre a Medcollab</h1>
