--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
 <h3>Isto quer dizer: quem nós somos!</h3>
 <p>Medcollab é uma organização médica que tem na colaboração entre os profissionais seu principal pilar. Entendemos que nossas forças somadas podem causar um impacto verdadeiro na saúde de nossos pacientes. </p>
 <p>A colaboração é o verdadeiro espírito da ciência. Somente através do conhecimento prático compartilhado é possível tranformar informação em valor.</p>
-<p>A primeira iniciativa da MedColab é oferecer um canal de comunicação onde os mais diversos eventos médicos possam ter uma divulgação ampla e gratuita, atingindo o maior número de colegas e, portanto levá-los a perseguir a educação continuada. Todos os eventos são bem-vindos - congressos, simpósios, aulas, cursos e coffee breaks. Sejam eles presenciais ou remotos, locais ou nacionais. Para que você tenha acesso a conhecimento médico e networking na sua cidade ou trancado no seu consultório.</p>
+<p>A primeira iniciativa da MedColab é oferecer um canal de comunicação onde os mais diversos eventos médicos possam ter uma divulgação ampla e gratuita, atingindo o maior número de colegas e, portanto levá-los a perseguir a educação continuada. Todos os eventos são bem-vindos - congressos, simpósios, aulas, cursos e palestras - principalmente se tiverem coffee breaks - sejam eles presenciais ou remotos, locais, nacionais ou internacionais. Para que você tenha acesso a conhecimento médico e networking na sua cidade ou trancado no seu consultório.</p>
  </body>
   </html>
