--- a/about.html
+++ b/about.html
@@ -9,6 +9,6 @@
 <p>Medcollab é uma organização médica que tem na colaboração entre os profissionais seu principal pilar. Entendemos que nossas forças somadas podem causar um impacto verdadeiro na saúde de nossos pacientes. </p>
 <p>A colaboração é o verdadeiro espírito da ciência. Somente através do conhecimento prático compartilhado é possível tranformar informação em valor.</p>
 <p>A primeira iniciativa da MedColab é oferecer um canal de comunicação onde os mais diversos eventos médicos possam ter uma divulgação ampla e gratuita, atingindo o maior número de colegas e, portanto ajudá-los a perseguir a educação continuada.</p>
-<p>Todos os eventos são bem-vindos - congressos, simpósios, aulas, cursos e palestras - principalmente se tiverem coffee breaks - sejam eles presenciais ou remotos, locais, nacionais ou internacionais. Nosso principal objetivo é que você tenha acesso a conhecimento médico e networking, diariamente, de forma fácil e objetiva, mesmo que esteja trancado no seu consultório.</p>
+<p>Todos os eventos são bem-vindos - congressos, simpósios, aulas, cursos e palestras - principalmente se tiverem coffee breaks - sejam eles presenciais ou remotos, locais, nacionais ou internacionais. Nosso principal objetivo é que você tenha acesso a conhecimento médico e networking, diariamente, de forma fácil e objetiva, até mesmo enquanto está trancado no seu consultório.</p>
  </body>
   </html>
