--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
       <h1>Este é o início de tudo</h1>
-      <p>Infelizmente nao tem nada aqui ainda.</p>
+      <p>Infelizmente não tem nada aqui ainda.</p>
       <p>Experimente visitar nossa página de <a href="eventos.html">eventos</a></p>
       <p>Ou, se preferir, visite uma página informativa sobre <a href="about.html">quem somos nós</a></p>
     </body>
