--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <title>MedCollab - Sobre nós</title>
+       <link rel="stylesheet" href="styles.css"
     </head>
      <body>
        <h1>Sobre a Medcollab</h1>
