--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <title>MedCollab - Início</title>
+      <link rel="stylesheet" href="styles.css"
     </head>
     <body>
       <h1>Este é o início de tudo</h1>
