--- a/eventos.html
+++ b/eventos.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
   <head>
-       <title>MedCollab - Eventos</title>
+    <link rel="stylesheet" href="styles.css"
+    <title>MedCollab - Eventos</title>
   </head>
   <body>
     eventos!!!
