--- a/eventos.html
+++ b/eventos.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css"
+    <link rel="stylesheet" href="styles.css">
     <title>MedCollab - Eventos</title>
   </head>
   <body>
