--- a/eventos.html
+++ b/eventos.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     eventos!!!
+    <p>Cadastre seu novo evento <a href="cadastrarEvento.html">aqui!</a></p>
   </body>
 </html>
