--- a/cadastrarEvento.html
+++ b/cadastrarEvento.html
@@ -25,9 +25,9 @@
         <br>
         <input type="local" id="local" />
         <br>
-        <label for="link" placeholder="https://">Link informativo:</label>
+        <label for="link">Link informativo:</label>
         <br>
-        <input type="link" id="link" />
+        <input type="link" id="link" placeholder="https://"/>
         <br>
         <label for="description">Descrição do evento:</label>
         <br>
@@ -35,7 +35,7 @@
         <br>
         <label for="taxes">Preços:</label>
         <br>
-        <input type="text" id="taxes" />
+        <input type="text" id="taxes" placeholder="R$ 0,00"/>
         <br>
         <button type="reset">Apagar</button>
         <button type="submit">Criar o evento</button>
