--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
   <html>
     <head>
       <title>MedCollab - Início</title>
-      <link rel="stylesheet" href="styles.css"
+      <link rel="stylesheet" href="styles.css">
+      <script src="components/header.js" type="text/javascript" defer></script>
     </head>
     <body>
+      <header-component></header-component>
       <h1>Este é o início de tudo</h1>
       <p>Infelizmente não tem nada aqui ainda.</p>
       <p>Experimente visitar nossa página de <a href="eventos.html">eventos</a></p>
