--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <title>MedCollab - Início</title>
       <link rel="stylesheet" href="styles.css">
       <script src="components/header.js" type="text/javascript" defer></script>
+      <script src="components/footer.js" type="text/javascript" defer></script>
     </head>
     <body>
       <header-component></header-component>
@@ -11,5 +12,6 @@
       <p>Infelizmente não tem nada aqui ainda.</p>
       <p>Experimente visitar nossa página de <a href="eventos.html">eventos</a></p>
       <p>Ou, se preferir, visite uma página informativa sobre <a href="about.html">quem somos nós</a></p>
+      <footer-component></footer-component>
     </body>
   </html>
