--- a/about.html
+++ b/about.html
@@ -2,14 +2,18 @@
   <html>
     <head>
       <title>MedCollab - Sobre nós</title>
-       <link rel="stylesheet" href="styles.css"
+       <link rel="stylesheet" href="styles.css">
+       <script src="components/header.js" type="text/javascript" defer></script>
+      <script src="components/footer.js" type="text/javascript" defer></script>
     </head>
      <body>
+       <header-component></header-component>
        <h1>Sobre a Medcollab</h1>
        <h3>Isto quer dizer: quem nós somos!</h3>
        <p>Medcollab é uma organização médica que tem na colaboração entre os profissionais seu principal pilar. Entendemos que nossas forças somadas podem causar um impacto verdadeiro na saúde de nossos pacientes. </p>
        <p>A colaboração é o verdadeiro espírito da ciência. Somente através do conhecimento prático compartilhado é possível tranformar informação em valor.</p>
        <p>A primeira iniciativa da MedColab é oferecer um canal de comunicação onde os mais diversos <a href="eventos.html">eventos médicos</a> possam ter uma divulgação ampla e gratuita, atingindo o maior número de colegas e, portanto ajudá-los a perseguir a educação continuada.</p>
        <p>Todos os eventos são bem-vindos - congressos, simpósios, aulas, cursos e palestras - principalmente se tiverem coffee breaks - sejam eles presenciais ou remotos, locais, nacionais ou internacionais. Nosso principal objetivo é que você tenha acesso a conhecimento médico e networking, diariamente, de forma fácil e objetiva, até mesmo enquanto está trancado no seu consultório.</p>
+       <footer-component></footer-component>
       </body>
 </html>
