--- a/eventos.html
+++ b/eventos.html
@@ -3,8 +3,11 @@
   <head>
     <link rel="stylesheet" href="styles.css">
     <title>MedCollab - Eventos</title>
+    <script src="components/header.js" type="text/javascript" defer></script>
+    <script src="components/footer.js" type="text/javascript" defer></script>
   </head>
   <body>
+    <header-component></header-component>
     <p>Cadastre seu novo evento <a href="cadastrarEvento.html">aqui!</a></p>
     <h1>Evento demonstração 1</h1>
     <h2>Nome do Evento</h2>
@@ -12,5 +15,6 @@
     <p>Data do evento: 00/00/2024</p>
     <h1>Evento demonstração 2</h1>
     <h1>Evento demonstração 3</h1>
+    <footer-component></footer-component>
   </body>
 </html>
