div evento style

--- a/eventos.html
+++ b/eventos.html
@@ -9,10 +9,12 @@
   <body>
     <header-component></header-component>
     <p>Cadastre seu novo evento <a href="cadastrarEvento.html">aqui!</a></p>
-    <h1>Evento demonstração 1</h1>
-    <h2>Nome do Evento</h2>
-    <p>Descrição piriri-pororó poropopó</p>
-    <p>Data do evento: 00/00/2024</p>
+    <div class="evento">
+      <h1>Evento demonstração 1</h1>
+      <h2>Nome do Evento</h2>
+      <p>Descrição piriri-pororó poropopó</p>
+      <p>Data do evento: 00/00/2024</p>
+    </div>
     <h1>Evento demonstração 2</h1>
     <h1>Evento demonstração 3</h1>
     <footer-component></footer-component>
