--- a/cadastrarEvento.html
+++ b/cadastrarEvento.html
@@ -8,6 +8,7 @@
     </head>
     <body>
       <header-component></header-component>
+    <main>
       <form action="/envia-evento" method="post">
         <label for="name">Nome:</label>
         <br>
@@ -40,6 +41,7 @@
         <button type="reset">Apagar</button>
         <button type="submit">Criar o evento</button>
       </form>
+      </main>
       <footer-component></footer-component>
     </body>
 </html>
