--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     </head>
     <body>
       <header-component></header-component>
-      <h1>Este é o início de tudo</h1>
-      <p>Infelizmente não tem nada aqui ainda.</p>
-      <p>Experimente visitar nossa página de <a href="eventos.html">eventos</a></p>
-      <p>Ou, se preferir, visite uma página informativa sobre <a href="about.html">quem somos nós</a></p>
+      <main>
+        <h1>Este é o início de tudo</h1>
+        <p>Infelizmente não tem nada aqui ainda.</p>
+        <p>Experimente visitar nossa página de <a href="eventos.html">eventos</a></p>
+        <p>Ou, se preferir, visite uma página informativa sobre <a href="about.html">quem somos nós</a></p>
+      </main>
       <footer-component></footer-component>
     </body>
   </html>
