--- a/cadastrarEvento.html
+++ b/cadastrarEvento.html
@@ -9,12 +9,17 @@
     <body>
       <header-component></header-component>
     <main>
-      <form action="/envia-evento" method="post">
-        <label for="name">Nome:</label>
+        <h1>CADASTRE SEU EVENTO</h1>
+        <p>O evento precisa estar correlacionado à área da saúde para ser aprovado. Não há restrição quanto a modalidade e custos. Seja descritivo para atrair seu público.</p>
+        <div>
+            <img class="birds" src="https://images.unsplash.com/photo-1579762715459-5a068c289fda?ixlib=rb-4.0.3&q=85&fm=jpg&crop=entropy&cs=srgb&dl=boston-public-library-_f9cP4_unmg-unsplash.jpg&w=640">
+        </div>
+      <form class="cadastroEvento" action="/envia-evento" method="post">
+        <label for="name">NOME:</label>
         <br>
         <input type="text" id="name" required/>
         <br>
-        <label for="date">Data do evento:</label>
+        <label for="date">DATA DO EVENTO:</label>
         <br>
         <input type="date" id="date" required />
         <br>
@@ -45,6 +50,31 @@
       <footer-component></footer-component>
     </body>
 </html>
+
+comentario
+main{
+    display: flexbox;
+    
+}
+.birds{
+    width: 400px;
+}
+.cadastroEvento{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+
+    input{
+        margin-bottom: 10px;
+        margin-top: 3px;
+    }
+    label{
+        border-radius: 2px;
+        background-color: red;
+        color:white;
+        padding: 3px;
+    }
+}
 
 
 
