--- a/cadastrarEvento.html
+++ b/cadastrarEvento.html
@@ -17,7 +17,7 @@
           aprovado.
         </p>
         <p>
-          Não há restrição quanto a modalidade e custos. Seja descritivo para
+          Não há restrição quanto à modalidade e custos. Seja descritivo para
           atrair seu público.
         </p>
         <img
